src/tui/snapshots/mysteries__tui__render__tests__tui_selection_highlight.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹info.fg›◆ ‹/›‹text.body›alpha‹/›
‹text.body›  ‹/›‹text.body bg=selection.bg›你好‹/›‹text.body› beta‹/›













‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.primary›                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 1 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换‹/›
