src/tui/snapshots/mysteries__tui__render__tests__tui_session_picker_open.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›


‹text.primary›                                  ‹/›‹text.title +bold›✦ MYSTERIES‹/›
‹text.primary›                          ‹/›‹accent.primary›AGENT · v1.0 · 终端编码助手‹/›
‹text.primary›        ‹/›‹text.body›读只读,写必询 —— 每一次文件改动与命令执行,都先把 diff 摊给你,等‹/›
‹text.primary›                               ‹/›‹text.body›你按下 y 才动手。‹/›

‹text.primary›                                     ‹/›‹text.muted›试试 ↓‹/›
‹text.primary›                   ‹/›‹accent.primary›〔任务〕‹/›‹text.primary› 给 Config 加 timeout_secs 字段‹/›
‹text.primary›                   ‹/›‹accent.primary›〔/help〕‹/›‹text.primary› 查看内置命令‹/›
‹text.primary›                   ‹/›‹accent.primary›〔/status〕‹/›‹text.primary› 当前会话快照‹/›
‹text.primary›                   ‹/›‹accent.primary›〔错误〕‹/›‹text.primary› 演示:鉴权失败(致命错误,终止 Loop)‹/›
‹border.strong bg=bg.surface›┌──────────────────────────────────────────────────────────────────┐‹/›
‹border.strong bg=bg.surface›│‹/›‹accent.primary bg=bg.surface +bold›会话‹/›‹text.primary bg=bg.surface›                                                              ‹/›‹border.strong bg=bg.surface›│‹/›
‹border.strong bg=bg.surface›│‹/›‹text.body bg=bg.surface›11111111 · 2026-07-04 10:00:00 · 第一段需求‹/›‹text.primary bg=bg.surface›                       ‹/›‹border.strong bg=bg.surface›│‹/›
‹border.strong bg=bg.surface›│‹/›‹accent.primary bg=bg.surface +bold +reversed›22222222 · 2026-07-04 11:00:00 · (无输入)‹/›‹text.primary bg=bg.surface›                         ‹/›‹border.strong bg=bg.surface›│‹/›
‹border.strong bg=bg.surface›│‹/›‹text.secondary bg=bg.surface›↑↓ 选 · Enter 恢复 · Esc 取消‹/›‹text.primary bg=bg.surface›                                     ‹/›‹border.strong bg=bg.surface›│‹/›‹border.subtle›───────────┐‹/›
‹border.strong bg=bg.surface›└──────────────────────────────────────────────────────────────────┘‹/›‹text.muted›/ 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 0 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
