src/tui/snapshots/mysteries__tui__render__tests__tui_status_block.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹accent.primary›> ‹/›‹text.primary›给我看一下当前会话状态‹/›

‹border.subtle›┌─ ‹/›‹info.fg +bold›会话快照‹/›‹border.subtle› ───────────────────────────────────────────────────────────‹/›
‹border.subtle›│ ‹/›‹text.secondary›provider: ‹/›‹text.primary›anthropic               ‹/›‹text.secondary›model: ‹/›‹text.primary›claude-test‹/›
‹border.subtle›│ ‹/›‹text.secondary›iter: ‹/›‹text.primary›2/8                     ‹/›‹text.secondary›msgs: ‹/›‹text.primary›1‹/›
‹border.subtle›│ ‹/›‹text.secondary›cwd: ‹/›‹text.primary›workspace               ‹/›‹text.secondary›tools: ‹/›‹text.primary›7‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────‹/›










‹text.secondary›status: ‹/›‹text.muted›◇ 就绪           anthropic · claude-test · iter 2/8 · 1 msgs · workspace‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›mysteries ▸ ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹text.primary›                                           ‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
