src/tui/snapshots/mysteries__tui__render__tests__tui_thinking_folded_daylight.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.2.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹text.secondary +bold›✻ 思考‹/›
‹text.muted›  reasoning line 01‹/›
‹text.muted›  reasoning line 02‹/›
‹text.muted›  reasoning line 03‹/›
‹text.muted›  reasoning line 04‹/›
‹text.muted›  reasoning line 05‹/›
‹text.muted›  reasoning line 06‹/›
‹text.muted›  reasoning line 07‹/›
‹text.muted›  reasoning line 08‹/›
‹text.muted›  reasoning line 09‹/›
‹text.muted›  reasoning line 10‹/›
‹text.muted›  reasoning line 11‹/›
‹text.muted›  reasoning line 12‹/›
‹text.muted›  … +8 行(Ctrl+O 展开)‹/›


‹text.title›                            ‹/›‹accent.primary bg=bg.surface›跳到底部 (ctrl+End) ↓‹/›


‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.title›                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 0 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
