src/tui/snapshots/mysteries__tui__render__tests__tui_timeline_tool_then_final_answer.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.2.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹accent.primary›> ‹/›‹text.primary›总结这个项目‹/›

‹success.fg›✓‹/›‹text.muted› ‹/›‹accent.primary +bold›read_file‹/›‹text.muted› path=note.txt‹/›‹text.secondary›  只读 · 自动运行 · 2 行 ⌄‹/›‹text.muted› · ctrl+o 展开‹/›

‹info.fg›◆ ‹/›‹text.body›这是一个 Rust 编写的终端编码助手。‹/›










‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.primary›                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 2 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
