src/tui/snapshots/mysteries__tui__render__tests__tui_tool_card_diff_cjk_wrap_narrow.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.3.1‹/›

‹border.strong›────────────────────────────────────────‹/›
‹border.subtle›┌─ ‹/›‹success.fg›✓‹/›‹text.muted› ‹/›‹accent.primary +bold›write_file‹/›‹text.muted› path=docs/说明.md‹/›
‹border.subtle›│ ‹/›‹success.fg›+ 第一段包含中文宽字符并且需要在窄视口‹/›
‹border.subtle›│ ‹/›‹success.fg›  中折行abcdef‹/›
‹border.subtle›│ ‹/›‹text.body›created docs/说明.md‹/›
‹border.subtle›└───────────────────────────────────────‹/›










‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.primary›             ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 0 msgs ·‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
